# msc_door_sim

./: CMakeLists.txt  README.md  package.xml
launch/: controller_utils.launch  door_sim.launch  turtlebot3_manipulation_upload.launch
models/hinged_door/: model-1_4.sdf  model.config  model.sdf
plugins/: door_info.cc
plugins/door_info_plugin/: CMakeLists.txt  door_info.cc
urdf/: open_manipulator_x.urdf.xacro  turtlebot3_manipulation_robot.urdf.xacro
worlds/: door.world
